--- a/demo/codegen/codegen.html
+++ b/demo/codegen/codegen.html
@@ -63,8 +63,8 @@ document.addEventListener('DOMContentLoaded', function(ev) {
 </head>
 <body>
 <h1>JS code generator demo: JS → AST → JS</h1>
-<p>using <a href="http://www.esprima.org/">esprima.js</a></p>
-<p>now, aiming at bringing this into <a href="http://code.google.com/p/esprima/issues/detail?id=89">esprima.js main line</a></p>
+<p>using <a href="http://www.esprima.org/">esprima</a> as parser</p>
+<p>and using <a href="http://github.com/Constellation/escodegen">escodegen</a> as code generator</p>
 <textarea id="console" rows="10" cols="30" placeholder="write your code"></textarea>
 <pre id="output"></pre>
 </body>
