add SameValue algorithm

--- a/slides/contents/20120407/presentation.html
+++ b/slides/contents/20120407/presentation.html
@@ -1957,6 +1957,11 @@ $(window).load(function () {
 <li>CoffeeScriptやばい...</li>
 </ul>
 </li>
+<li>実は昔からあるSameValue algorithmがuserlandで見えるようになったもの<ul>
+<li>SameValue algorithmはproperty代入の同一性検査とかに使われていました</li>
+<li>writableがfalseでSameValueじゃなければrejectとか</li>
+</ul>
+</li>
 </ul></section>
             
           </div>
