add ES.next parser

--- a/slides/contents/20120407/presentation.html
+++ b/slides/contents/20120407/presentation.html
@@ -1639,6 +1639,10 @@ $(window).load(function () {
             <section><ul>
 <li>おそらく, 皆さんがES.nextの主要機能についてしゃべり尽くしていると思うので</li>
 <li>誰も喋っていないのではないかなーと思われる, corner casesについて</li>
+<li>parserどうぞ<ul>
+<li><a href="http://constellation.github.com/iv/js/es.next.html">ES.next parser</a></li>
+</ul>
+</li>
 </ul></section>
             
           </div>
