--- a/slides/contents/20121118/modules.html
+++ b/slides/contents/20121118/modules.html
@@ -319,6 +319,7 @@ parse(generate(parse(code))) === parse(code)</pre>
 
       <article>
         <h3>Esmangle</h3>
+        <p>Esmangle consists of many small pass functions. We apply them to AST iteratively to resolve fixed point of AST like compiler.</p>
         <table>
         <tbody>
           <tr>
@@ -392,6 +393,7 @@ parse(generate(parse(code))) === parse(code)</pre>
         <ul>
           <li><a href="http://lljs.org/">LLJS</a> consists of modified Esprima and Escodegen</li>
           <li><a href="https://github.com/jshint/jshint/">JSHint</a> uses Esprima for its ECMAScript parser</li>
+          <li><a href="https://github.com/yhara/rumcoke">Rumcoke</a> uses Escodegen for its backend</li>
         </ul>
       </article>
 
