--- a/demo/e4x/index.html
+++ b/demo/e4x/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Esprima: Parser</title>
+  <title>Esprima: E4X</title>
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" type="text/css" href="orion/built-editor.css"/>
   <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -35,48 +35,6 @@ textarea {
              <h1><a href="../index.html">Esprima</a></h1>
           </li>
         </ul>
-        <section>
-          <ul class="right">
-            <li class="divider show-for-medium-and-up"></li>
-            <li class="has-dropdown">
-              <a href="../demo/index.html">Demo</a>
-              <ul class="dropdown">
-                <li><label>Static Analysis</label></li>
-                <li><a href="../demo/parse.html">Online Parsing</a></li>
-                <li><a href="../demo/validate.html">Syntax Validator</a></li>
-                <li><a href="../demo/precedence.html">Operator Precedence</a></li>
-                <li><a href="../demo/collector.html">Regex Collector</a></li>
-                <li><label>Dynamic Tracing</label></li>
-                <li><a href="../demo/functiontrace.html">Function Instrumentation</a></li>
-                <li><label>Code Transformation</label></li>
-                <li><a href="../demo/rewrite.html">Source Rewrite</a></li>
-                <li><a href="../demo/minify.html">Minifiy &amp; Obfuscate</a></li>
-                <li><label>Editing Tools</label></li>
-                <li><a href="../demo/highlight.html">Identifier Highlight</a></li>
-                <li><a href="../demo/rename.html">Rename Refactoring</a></li>
-                <li><a href="../demo/autocomplete.html">Autocomplete</a></li>
-              </ul>
-            </li>
-            <li class="has-dropdown">
-              <a href="#">Project</a>
-              <ul class="dropdown">
-                <li><a href="http://github.com/ariya/esprima">Git Repository</a></li>
-                <li><a href="https://travis-ci.org/ariya/esprima">Continuous Integration</a></li>
-                <li><a href="http://groups.google.com/group/esprima">Mailing List</a></li>
-                <li><a href="http://issues.esprima.org/">Issue Tracker</a></li>
-                <li class="divider"></li>
-                <li><label>QA</label></li>
-                <li><a href="../test/index.html">Unit Tests</a></li>
-                <li><a href="../test/benchmarks.html">Benchmarks Suite</a></li>
-                <li><a href="../test/compat.html">Compatibility Tests</a></li>
-                <li><a href="../test/compare.html">Speed Comparison</a></li>
-                <li><a href="../test/module.html">Module Loading</a></li>
-                <li><a href="../test/coverage.html">Coverage Analysis</a></li>
-              </ul>
-            </li>
-            <li><a href="../doc/index.html">Documentation</a></li>
-          </ul>
-        </section>
       </nav>
     </div>
   </div>
@@ -84,7 +42,8 @@ textarea {
   <!-- Title and subtitle -->
   <div class="row">
     <div class="twelve columns">
-       <h3 class="subheader"><strong>Parser</strong> produces the (beautiful) syntax tree</h3>
+       <h3 class="subheader"><strong>E4X</strong>, that is, the system that unveils the world.</h3>
+       <p>complete E4X (ECMA 357) parser</p>
     </div>
   </div>
 
@@ -501,11 +460,6 @@ textarea {
   </div>
 
   <div class="row">
-    <p></p>
-    <p>For a command-line usage, check <tt>esvalidate</tt> from <a href="https://npmjs.org/package/esprima">Esprima package</a> for Node.js.</p>
-  </div>
-
-  <div class="row">
     <div class="two columns">
       <label class="inline right">URL for this code:</label>
     </div>
@@ -517,12 +471,12 @@ textarea {
   <!-- Footer -->
   <div class="row copyright">
     <div class="six columns">
-      <p>Esprima is created and mantained by <a href="http://ariya.ofilabs.com/about">Ariya Hidayat</a>.</p>
+      <p>Esprima with E4X is created and mantained by <a href="https://github.com/Constellation">Yusuke Suzuki</a>.</p>
     </div>
     <div class="six columns">
       <ul class="link-list right">
         <li><a href="http://twitter.com/esprima">@Esprima</a></li>
-        <li><a href="https://github.com/ariya/esprima">GitHub</a></li>
+        <li><a href="https://github.com/Constellation/esprima">GitHub</a></li>
       </ul>
     </div>
   </div>
