--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ body {
 
         <h2 id="activities">Activities</h2>
         <ul>
-            <li>twitter: <a href="https://twitter.com/Constellation">Constellation</a></li>
+            <li>twitter: <a href="https://twitter.com/Constellation">@Constellation</a></li>
             <li>GitHub: <a href="https://github.com/Constellation">Constellation</a></li>
         </ul>
 
