--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@ body {
             <li><a href="#activities">Activities</a></li>
             <li><a href="#interests">Interests</a></li>
             <li><a href="#softwares">Softwares</a></li>
+            <li><a href="/blog">Blog</a></li>
           </ul><!--
           <ul class="nav navbar-nav navbar-right">
             <li><a href="https://github.com/Constellation">GitHub</a></li>
