--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@ body {
             <li><a href="#contact">Contact</a></li>
             <li><a href="#activities">Activities</a></li>
             <li><a href="#interests">Interests</a></li>
+            <li><a href="#publications">Publications</a></li>
+            <li><a href="#achievements">Achievements</a></li>
             <li><a href="#softwares">Softwares</a></li>
             <li><a href="/blog">Blog</a></li>
           </ul><!--
@@ -74,6 +76,7 @@ body {
         <ul>
             <li>twitter: <a href="https://twitter.com/Constellation">@Constellation</a></li>
             <li>GitHub: <a href="https://github.com/Constellation">Constellation</a></li>
+            <li>IRC: yusukesuzuki</li>
         </ul>
 
         <h2 id="interests">Interests</h2>
@@ -84,7 +87,8 @@ body {
                 <li>Web Browsers
                     <ul>
                     <li>Rendering</li>
-                    <li>CSS Selector matching</li>
+                    <li>Selector matching</li>
+                    <li>Style resolution</li>
                     <li>CSS JIT Compile</li>
                     </ul>
                 </li>
@@ -99,6 +103,31 @@ body {
             <li>Accelerators: GPU, FPGA, Intel Xeon Phi</li>
             <li>VM, Compiler and JIT Compiler</li>
         </ul>
+
+        <h2 id="publications">Publications</h2>
+        <h3>Refereed Full Papers</h3>
+            <ol>
+                <li><span class="author-me">Yusuke Suzuki</span>, Shinpei Kato, Hiroshi Yamada and Kenji Kono: <strong>GPUvm: Why Not Virtualizing GPUs at the Hypervisor?</strong>, In Proceedings of 2014 USENIX Annual Technical Conference (USENIX ATC 14), 2014, pp. 109-120.</li>
+            </ol>
+
+        <h3>Non-Refereed Papers</h3>
+            <ol>
+                <li><span class="author-me">鈴木勇介</span>, 加藤真平, 山田浩史, 河野健二: <strong>GPU の完全仮想化</strong>, 並列/分散/協調処理に関するサマー・ワークショップ (SWoPP '13), 2013.</li>
+                <li><span class="author-me">Yusuke Suzuki</span>: <strong>Escodegen and Esmangle: Using Mozilla JavaScript AST as an IR</strong>, AOSD '13 Industry Track, 2013.</li>
+            </ol>
+
+        <h3>Non-Refereed Posters</h3>
+            <ol>
+                <li><span class="author-me">鈴木勇介</span>, 加藤真平, 山田浩史, 河野健二: <strong>GPUvm: ハイパーバイザによる GPU の完全仮想化手法</strong>, 日本ソフトウェア科学会ディペンダブルシステム研究会 (DSW '13), 2013.</li>
+                <li><span class="author-me">鈴木勇介</span>: <strong>Building modern JavaScript Engine</strong>, 第53回プログラミング・シンポジウム, 2012.</li>
+            </ol>
+
+        <h2 id="achievements">Achievements</h2>
+        <ol>
+            <li>IPSJ Yamashita SIG Research Award, As of March 2015 (to appear)</li>
+            <li>IPSJ SIGOS Best Student Presentation Award, As of July 2013</li>
+            <li>IPSJ Yamauchi Prize for encouragement, As of January 2013</li>
+        </ol>
 
         <h2 id="softwares">Softwares</h2>
         <h3>iv / lv5: ECMAScript engine</h3>
