--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body {
 
         <h2 id="achievements">Achievements</h2>
         <ol>
-            <li>IPSJ Yamashita SIG Research Award, As of March 2015 (to appear)</li>
+            <li>IPSJ Yamashita SIG Research Award, <a href="https://www.ipsj.or.jp/award/yamasita2014-detail.html#os">As of October 2014</a></li>
             <li>IPSJ SIGOS Best Student Presentation Award, As of July 2013</li>
             <li>IPSJ Yamauchi Prize for encouragement, As of January 2013</li>
         </ol>
