--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ body {
                 </div>
                 <div class="col-xs-10 col-md-9 col-lg-9">
                     <h1>Yusuke SUZUKI <small><a href="https://github.com/Constellation" style="color:#777;">Constellation</a></small></h1>
+                    <p>Master's Student at Department of Information and Computer Science, Keio University</p>
                     <p>WebKit committer. I'm interested in ECMAScript/JavaScript, browsers, JIT compilers, OS, VMM, accelerators etc.</p>
                 </div>
             </div>
@@ -118,15 +119,16 @@ body {
 
         <h3>Non-Refereed Posters</h3>
             <ol>
+                <li><span class="author-me">鈴木勇介</span>, 加藤真平, 山田浩史, 河野健二: <strong>Design and Implementation of GPU Virtualization at the Hypervisor</strong>, 日本ソフトウェア科学会ディペンダブルシステム研究会 (DSW '14), 2014.</li>
                 <li><span class="author-me">鈴木勇介</span>, 加藤真平, 山田浩史, 河野健二: <strong>GPUvm: ハイパーバイザによる GPU の完全仮想化手法</strong>, 日本ソフトウェア科学会ディペンダブルシステム研究会 (DSW '13), 2013.</li>
                 <li><span class="author-me">鈴木勇介</span>: <strong>Building modern JavaScript Engine</strong>, 第53回プログラミング・シンポジウム, 2012.</li>
             </ol>
 
         <h2 id="achievements">Achievements</h2>
         <ol>
-            <li>IPSJ Yamashita SIG Research Award, As of March 2015 (to appear)</li>
-            <li>IPSJ SIGOS Best Student Presentation Award, As of July 2013</li>
-            <li>IPSJ Yamauchi Prize for encouragement, As of January 2013</li>
+            <li>IPSJ Yamashita SIG Research Award, As of 2015 (to appear)</li>
+            <li>IPSJ SIGOS Best Student Presentation Award, As of 2013</li>
+            <li>IPSJ Yamauchi Prize for encouragement, As of 2013</li>
         </ol>
 
         <h2 id="softwares">Softwares</h2>
