--- a/resume.html
+++ b/resume.html
@@ -100,15 +100,16 @@ Kono Lab.</p>
 
         <h3>Non-Refereed Posters</h3>
             <ol>
+                <li><span class="author-me">鈴木勇介</span>, 加藤真平, 山田浩史, 河野健二: <strong>Design and Implementation of GPU Virtualization at the Hypervisor</strong>, 日本ソフトウェア科学会ディペンダブルシステム研究会 (DSW '14), 2014.</li>
                 <li><span class="author-me">鈴木勇介</span>, 加藤真平, 山田浩史, 河野健二: <strong>GPUvm: ハイパーバイザによる GPU の完全仮想化手法</strong>, 日本ソフトウェア科学会ディペンダブルシステム研究会 (DSW '13), 2013.</li>
                 <li><span class="author-me">鈴木勇介</span>: <strong>Building modern JavaScript Engine</strong>, 第53回プログラミング・シンポジウム, 2012.</li>
             </ol>
 
 <h2>Honors / Achievements</h2>
         <ol>
-            <li>IPSJ Yamashita SIG Research Award, <a href="https://www.ipsj.or.jp/award/yamasita2014-detail.html#os">As of October 2014</a></li>
-            <li>IPSJ SIGOS Best Student Presentation Award, As of July 2013</li>
-            <li>IPSJ Yamauchi Prize for encouragement, As of January 2013</li>
+            <li>IPSJ Yamashita SIG Research Award, <a href="https://www.ipsj.or.jp/award/yamasita2014-detail.html#os">As of 2014</a></li>
+            <li>IPSJ SIGOS Best Student Presentation Award, As of 2013</li>
+            <li>IPSJ Yamauchi Prize for encouragement, As of 2013</li>
         </ol>
 
 <h2>Activities</h2>
