--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ body {
         <ul>
             <li>twitter: <a href="https://twitter.com/Constellation">@Constellation</a></li>
             <li>GitHub: <a href="https://github.com/Constellation">Constellation</a></li>
+            <li>Blog: <a href="http://constellation.github.io/blog/">Constellation Scorpius</a></li>
             <li>IRC: yusukesuzuki</li>
         </ul>
 
