--- a/resume.html
+++ b/resume.html
@@ -89,7 +89,7 @@ Kono Lab.</p>
 <h2>Publications</h2>
         <h3>Refereed Full Papers</h3>
             <ol>
-                <li><span class="author-me">Yusuke Suzuki</span>, Shinpei Kato, Hiroshi Yamada and Kenji Kono: <strong>GPUvm: Why Not Virtualizing GPUs at the Hypervisor?</strong>, In Proceedings of 2014 USENIX Annual Technical Conference (USENIX ATC 14), 2014, pp. 109-120.</li>
+                <li><span class="author-me">Yusuke Suzuki</span>, Shinpei Kato, Hiroshi Yamada and Kenji Kono: <strong>GPUvm: Why Not Virtualizing GPUs at the Hypervisor?</strong>, In Proceedings of 2014 USENIX Annual Technical Conference (USENIX ATC '14), 2014, pp. 109-120.</li>
             </ol>
 
         <h3>Non-Refereed Papers</h3>
