--- a/index.html
+++ b/index.html
@@ -71,7 +71,16 @@ body {
         </div>
 
         <h2 id="contact">Contact</h2>
-        <p><a href="mailto:utatane.tea@gmail.com">utatane.tea@gmail.com</a> / <a href="mailto:yusukesuzuki@chromium.org">yusukesuzuki@chromium.org</a> / <a href="mailto:yusuke.suzuki@sslab.ics.keio.ac.jp">yusuke.suzuki@sslab.ics.keio.ac.jp</a></p>
+        <ul>
+            <li><a href="mailto:utatane.tea@gmail.com">utatane.tea@gmail.com</a>
+            </li>
+            <li><a href="mailto:yusukesuzuki@chromium.org">yusukesuzuki@chromium.org</a>
+            <ul><li>For Chromium / Blink development.</li></ul>
+            </li>
+            <li><a href="mailto:yusuke.suzuki@sslab.ics.keio.ac.jp">yusuke.suzuki@sslab.ics.keio.ac.jp</a>
+            <ul><li>For academic activities.</li></ul>
+            </li>
+        </ul>
 
         <h2 id="activities">Activities</h2>
         <ul>
