--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ body {
                     <h1>Yusuke SUZUKI <small><a href="https://github.com/Constellation" style="color:#777;">Constellation</a></small></h1>
                     <p>Master's Student at Department of Information and Computer Science, Keio University</p>
                     <p>WebKit committer. I'm interested in ECMAScript/JavaScript, browsers, JIT compilers, OS, VMM, accelerators etc.</p>
+                    <p>Here's my <a href="resume.pdf">resume PDF.</a></p>
                 </div>
             </div>
         </div>
