--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@ email: yusuke.suzuki@sslab.ics.keio.ac.jp<br>
 
 <h2>About</h2>
 
-<p>Graduated student at Department of Information and Computer Science, Keio University.</p>
+<p>Ph.D student in the Department of Information and Computer Science, Keio University.</p>
 
 <h2>Interests</h2>
 <ul>
@@ -66,7 +66,7 @@ I believe this is a great contribution to a grander vision of computer
 science.
 
 <h2>Work Experience</h2>
-<h3>Research Fellowships of the Japan Society for the Promotion of Science for Young Scientists; DC1 (to appear), April 2015 -</h3>
+<h3>Research Fellowships of the Japan Society for the Promotion of Science for Young Scientists; DC1, April 2015 -</h3>
 
 <h3>Software Engineering Intern, Google Japan Inc., August 2013 - September 2013</h3>
 <p>At Google Chrome team, developed ECMAScript 6th Promise API and optimized XMLHttpRequest Blob transferring. Created 30~ patches and became a Chromium committer (yusukesuzuki@chromium.org).</p>
@@ -75,13 +75,19 @@ science.
 <p>Developed iOS application by using Objective-C. And implemented JavaScript modules used on their web service.</p>
 
 <h2>Education</h2>
-<h3>MS Computer Science, Keio University, Yokohama Japan, 2013 - current</h3>
+<h3>Ph.D. student, Computer Science, Keio University, Yokohama Japan, April 2015 - present</h3>
+<p>Concentration: GPU and other devices<br>
+Kono Lab.</p>
+<p>Projects:<br>
+Integrating GPUs into system software abstractions and coordinating GPUs and the other devices.</p>
+
+<h3>M.E. Computer Science, Keio University, Yokohama Japan, April 2013 - March 2015</h3>
 <p>Concentration: GPU virtualization<br>
 Kono Lab.</p>
 <p>Projects:<br>
 Designed open architecture of GPU virtualization using Xen. Built a prototype of fully virtualizated GPUs and multiplexed virtualized GPUs.</p>
 
-<h3>BS Information and Computer Science, Keio University, Yokohama Japan, 2009 - 2013</h3>
+<h3>B.E. Information and Computer Science, Keio University, Yokohama Japan, April 2009 - March 2013</h3>
 <p>Concentration: GPU virtualization<br>
 Kono Lab.</p>
 <p>Investigated GPU internals and interactions between GPU and OS.</p>
@@ -107,7 +113,7 @@ Kono Lab.</p>
 
 <h2>Honors / Achievements</h2>
         <ol>
-            <li>IPSJ Yamashita SIG Research Award, <a href="https://www.ipsj.or.jp/award/yamasita2014-detail.html#os">As of 2014</a></li>
+            <li>IPSJ Yamashita SIG Research Award, <a href="https://www.ipsj.or.jp/award/yamasita2014-detail.html#os">As of 2015</a></li>
             <li>IPSJ SIGOS Best Student Presentation Award, As of 2013</li>
             <li>IPSJ Yamauchi Prize for encouragement, As of 2013</li>
         </ol>
