--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body {
                 </div>
                 <div class="col-xs-10 col-md-9 col-lg-9">
                     <h1>Yusuke SUZUKI <small><a href="https://github.com/Constellation" style="color:#777;">Constellation</a></small></h1>
-                    <p>Ph.D. Student at Department of Information and Computer Science, Keio University</p>
+                    <p>Ph.D. Student in the Department of Information and Computer Science, Keio University</p>
                     <p>WebKit committer. I'm interested in ECMAScript/JavaScript, browsers, JIT compilers, OS, VMM, accelerators etc.</p>
                     <p>Here's my <a href="resume.pdf">resume PDF.</a></p>
                 </div>
