--- a/resume.html
+++ b/resume.html
@@ -66,7 +66,7 @@ I believe this is a great contribution to a grander vision of computer
 science.
 
 <h2>Work Experience</h2>
-<h3>Research Fellowships of the Japan Society for the Promotion of Science for Young Scientists; DC1 (to appear), April 2015 -</h3>
+<h3>Research Fellowships of the Japan Society for the Promotion of Science for Young Scientists; DC1, April 2015 -</h3>
 
 <h3>Software Engineering Intern, Google Japan Inc., August 2013 - September 2013</h3>
 <p>At Google Chrome team, developed ECMAScript 6th Promise API and optimized XMLHttpRequest Blob transferring. Created 30~ patches and became a Chromium committer (yusukesuzuki@chromium.org).</p>
@@ -113,9 +113,9 @@ Kono Lab.</p>
         </ol>
 
 <h2>Activities</h2>
-<h3>WebKit Committer</h3>
-<p>I contributed to WebKit CSS JIT (JIT compiling CSS selector to machine code to make matching against elements faster), mainly focused on more intelligent backtrackig. My name is added to WebCore/cssjit/SelectorCompiler.cpp's copyright. And I became a WebKit committer.</p>
-<p>And now, while implmenting / improving CSS JIT, I've been contributing the WebKit implementation of <a href="http://dev.w3.org/csswg/selectors4/">CSS Selectors Level4</a>. For example, implementing `:matches` functional pseudo class.
+<h3>WebKit Reviewer</h3>
+<p>I contributed to WebKit CSS JIT (JIT compiling CSS selector to machine code to make matching against elements faster), mainly focused on more intelligent backtrackig. My name is added to WebCore/cssjit/SelectorCompiler.cpp's copyright.</p>
+<p>Implementing a lot of ES6 features on JavaScriptCore, and then <a href="https://lists.webkit.org/pipermail/webkit-dev/2015-May/027416.html">become a reviewer.</a></p>
 
 <h3>Chromium Committer</h3>
 <p><a href="mailto:yusukesuzuki@chromium.org">yusukesuzuki@chromium.org</a>: I worked on Google Chrome team as software engineering intern and committed 30~ patches to Chromium / Blink project.
